<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="@dimen/_250sdp"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="@dimen/_10sdp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_6sdp"
            android:layout_marginBottom="@dimen/_6sdp"
            >
            <TextView
                android:layout_width="@dimen/_120sdp"
                android:layout_height="wrap_content"
                android:text="@string/button_opacity"
                android:layout_gravity="center_vertical"
                />
            <Spinner
                android:id="@+id/opacitySpinner"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/_6sdp"
            >
            <TextView
                android:layout_width="@dimen/_120sdp"
                android:layout_height="wrap_content"
                android:text="@string/button_size"
                android:layout_gravity="center_vertical"
                />
            <Spinner
                android:id="@+id/sizeSpinner"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_6sdp"
            >
            <RelativeLayout
                android:layout_width="@dimen/_100sdp"
                android:layout_height="2dp"
                android:layout_gravity="center_vertical"
                />
            <TextView
                android:layout_width="@dimen/_70sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/first_set"
                />
            <TextView
                android:layout_width="@dimen/_70sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:text="@string/second_set"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/_6sdp"
            >
            <TextView
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:text="@string/left_button"
                android:layout_gravity="center_vertical"
                />
            <cyou.joiplay.joipad.view.KeyCodeSpinner
                android:id="@+id/leftSpinner"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                />
            <cyou.joiplay.joipad.view.KeyCodeSpinner
                android:id="@+id/leftSpinner1"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/_6sdp"
            >
            <TextView
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:text="@string/right_button"
                android:layout_gravity="center_vertical"
                />
            <cyou.joiplay.joipad.view.KeyCodeSpinner
                android:id="@+id/rightSpinner"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                />
            <cyou.joiplay.joipad.view.KeyCodeSpinner
                android:id="@+id/rightSpinner1"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/_6sdp"
            >
            <TextView
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:text="@string/cleft_button"
                android:layout_gravity="center_vertical"
                />
            <cyou.joiplay.joipad.view.KeyCodeSpinner
                android:id="@+id/cleftSpinner"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                />
            <cyou.joiplay.joipad.view.KeyCodeSpinner
                android:id="@+id/cleftSpinner1"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/_6sdp"
            >
            <TextView
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:text="@string/cright_button"
                android:layout_gravity="center_vertical"
                />
            <cyou.joiplay.joipad.view.KeyCodeSpinner
                android:id="@+id/crightSpinner"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                />
            <cyou.joiplay.joipad.view.KeyCodeSpinner
                android:id="@+id/crightSpinner1"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/_6sdp"
            >
            <TextView
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:text="@string/first_button"
                android:layout_gravity="center_vertical"
                />
            <cyou.joiplay.joipad.view.KeyCodeSpinner
                android:id="@+id/firstSpinner"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                />
            <cyou.joiplay.joipad.view.KeyCodeSpinner
                android:id="@+id/firstSpinner1"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/_6sdp"
            >
            <TextView
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:text="@string/second_button"
                android:layout_gravity="center_vertical"
                />
            <cyou.joiplay.joipad.view.KeyCodeSpinner
                android:id="@+id/secondSpinner"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                />
            <cyou.joiplay.joipad.view.KeyCodeSpinner
                android:id="@+id/secondSpinner1"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/_6sdp"
            >
            <TextView
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:text="@string/third_button"
                android:layout_gravity="center_vertical"
                />
            <cyou.joiplay.joipad.view.KeyCodeSpinner
                android:id="@+id/thirdSpinner"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                />
            <cyou.joiplay.joipad.view.KeyCodeSpinner
                android:id="@+id/thirdSpinner1"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/_6sdp"
            >
            <TextView
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:text="@string/fourth_button"
                android:layout_gravity="center_vertical"
                />
            <cyou.joiplay.joipad.view.KeyCodeSpinner
                android:id="@+id/fourthSpinner"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                />
            <cyou.joiplay.joipad.view.KeyCodeSpinner
                android:id="@+id/fourthSpinner1"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/_6sdp"
            >
            <TextView
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:text="@string/fifth_button"
                android:layout_gravity="center_vertical"
                />
            <cyou.joiplay.joipad.view.KeyCodeSpinner
                android:id="@+id/fifthSpinner"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                />
            <cyou.joiplay.joipad.view.KeyCodeSpinner
                android:id="@+id/fifthSpinner1"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/_6sdp"
            >
            <TextView
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:text="@string/sixth_button"
                android:layout_gravity="center_vertical"
                />
            <cyou.joiplay.joipad.view.KeyCodeSpinner
                android:id="@+id/sixthSpinner"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                />
            <cyou.joiplay.joipad.view.KeyCodeSpinner
                android:id="@+id/sixthSpinner1"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                />
        </LinearLayout>
        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/_6sdp"
            android:background="@android:color/transparent"
            />
    </LinearLayout>
</ScrollView>